Added images to the index page

--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Index page 
-        </title>
-        <link rel="stylesheet" href = "./indexStyle.css"/>
-    </head>
-    <body>
-        <div class="header">
-        <img src="pp.jpg" alt="Profile Photo" height="100" width="100" id="ppimg"/>
-        <h1> Welcome to my Homepage</h1>
 
-        </div>
-    <hr>
+<head>
+  <title>
+    Index page
+  </title>
+  <link rel="stylesheet" href="./indexStyle.css" />
+</head>
+
+<body bgcolor="white">
+  <div class="header">
+    <img src="pp.jpg" alt="Profile Photo" height="100" width="100" id="ppimg" />
+    <h1> Welcome to my Homepage</h1>
+
+  </div>
+  <hr>
 
 
+  <h2> <a href="profile.html">My Profile </a></h2>
+  <h2> <a href="academics.html">My Academic Records </a></h2>
 
+  <div class=" image_container">
+    <img src="img1.png" alt="image 1" height ="300px">
+    <img src="img2.png" alt="image 2" height="300px">
+    <img src="img3.png" alt="image 3" height="300px">
+  </div>
+</body>
 
-
-    </body>
 </html>
